# mmdvm-sdr-1

./: .gitignore  ANALYSIS.md  BUFFER_OPTIMIZATIONS.md  BUILD_OPTIONS.md  CMAKE_UPDATES_SUMMARY.md  CMakeLists.txt  COMMERCIAL_IMPLEMENTATIONS.md  CalPOCSAG.cpp  CalPOCSAG.h  Config.h  DMR_SFR_STANDARDS.md  DStarRX.cpp  FMDefines.h  FMModem.cpp  FMModem.h  FMRX.cpp  FMRX.h  FMTX.cpp  FMTX.h  Globals.h  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_RECOMMENDATIONS.md  INTEGRATION_TEST_GUIDE.md  IO.cpp  IO.h  IORPi.cpp  IORPiSDR.cpp  MIGRATION_NOTES.md  MMDVM.cpp  POCSAGDefines.h  POCSAGTX.cpp  POCSAGTX.h  POCSAG_IMPLEMENTATION.md  PROTOCOL_V2_MIGRATION.md  PlutoSDR.cpp  PlutoSDR.h  ProtocolV2.h  README.md  RESOURCE_REQUIREMENTS.md  (+25 more)
docs/: README.md  SHARED_MEMORY_IPC.md
docs/dmr-sfr/: SFR_TECHNICAL_REQUIREMENTS.md
docs/implementation/: FM_IMPLEMENTATION.md
docs/mmdvmhost/: MMDVMHOST_ANALYSIS.md  UDP_IMPLEMENTATION_PLAN.md  UDP_INTEGRATION.md
docs/qradiolink/: QRADIOLINK_ANALYSIS.md
docs/upstream/: mmdvm-sdr-to-upstream.patch
tests/: test_fmmodem.cpp  test_neon.cpp  test_resampler.cpp
tests/integration/: CMakeLists.txt
